# drumgen

./: .gitignore  CLAUDE.md  QUICKSTART.md  README.md  als_extractor.py  app.py  assembler.py  cell_library.py  drumgen.bat  drumgen.py  export_cells.py  humanizer.py  live_player.py  midi_engine.py  midi_reader.py  preview.py  requirements.txt  run-drumgen  run-drumgen.ps1  setup.bat  setup.sh  test_drumgen.py  validate_midi.py
kit_mappings/: addictive_drums.json  general_midi.json  ugritone.json
plugin/: Cargo.toml  build-windows.sh
plugin/.cargo/: config.toml
plugin/cells/: builtin.json
plugin/src/: generation.rs  lib.rs  params.rs  playback.rs
plugin/src/engine/: assembler.rs  cell.rs  cell_library.rs  humanizer.rs  midi_math.rs  mod.rs
styles/: drumgen-style-dna.md
